<resources>
    <string name="app_name">Poker Tools</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_stats">Show Stats</string>
    <string name="initial_percentage">0%</string>
    <string name="actionbar_title">Poker Tools</string>
    <string name="range">Range</string>
    <string name="equity">Equity</string>
    <string name="select_suited">Select Suited</string>
    <string name="select_broadway">Select Broadway</string>
    <string name="select_pairs">Select Pairs</string>
    <string name="select_all">Select All</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="introduce_your_range">Introduce Your Range</string>
    <string name="change_the_ranking">Change the Ranking</string>
    <string name="sklansky_ranking">Sklansky Ranking</string>
    <string name="strength_ranking">Strength Ranking</string>
    <string name="example_personal_range">Example: 77+, AKs-A7s</string>
    <string name="personal_range_dialog_title">Choose Your Range</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="generate_the_current_range">Generate the current range</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_play_chart">Play Stats</string>
    <string name="title_draw_chart">Draw Stats</string>
    <string name="no_draws">No Draws</string>
    <string name="error_no_range_selected">Please, select a range</string>
    <string name="error_noboards_cards">Please, select at least 3 cards in the board</string>
    <string name="preflop">PreFlop</string>
    <string name="flop">Flop</string>
    <string name="turn">Turn</string>
    <string name="river">River</string>
    <string name="calculate">Calculate</string>
    <string name="stop">Stop</string>
    <string name="next_phase">Next Phase</string>
    <string name="reset">Reset</string>
    <string name="default_crono">00:00:0</string>
    <string name="text_simu">Simu:</string>
    <string name="default_simu">Simu: 0</string>
    <string name="stop_limit">Stop Limit</string>
    <string name="number_of_players">Number of Players</string>
    <string name="player_card">Player Card</string>
    <string name="player">Player</string>
    <string name="fold">Fold</string>
    <string name="default_equity">Equity: 0%</string>
    <string name="board_cards">Board Cards</string>
    <string name="back_card_resource">back_card</string>
    <string name="_0_to_infinity">0 to infinity loop</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="error_not_onpreflop">It is only allowed to change on preflop</string>
    <string name="error_onsim">It is not allowed during a simulation</string>
    <string name="error_no_players">There is not players for a simulation</string>
    <string name="title_select_cards">Select the Cards</string>
    <string name="error_board_cards_preflop">You can´t choose board cards on preflop</string>
    <string name="cards_of_player">Cards of Player</string>
</resources>
