<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/selectSuited" android:title="@string/select_suited"/>
    <item android:id="@+id/selectBroadway" android:title="@string/select_broadway"/>
    <item android:id="@+id/selectPairs" android:title="@string/select_pairs"/>
    <item android:id="@+id/selectAll" android:title="@string/select_all"/>
    <item android:id="@+id/clear" android:title="@string/clear_selection"/>
    <item android:id="@+id/selectPersonalRange" android:title="@string/introduce_your_range"/>
    <item android:id="@+id/generateRange" android:title="@string/generate_the_current_range"/>
    <item android:id="@+id/changeRanking" android:title="@string/change_the_ranking">
        <menu>
            <item android:id="@+id/sklansky" android:title="@string/sklansky_ranking"/>
            <item android:id="@+id/strength" android:title="@string/strength_ranking"/>
        </menu>
    </item>

</menu>